# gummiboot

./: .gitignore  Makefile  Makefile.am  README  TODO  autogen.sh  configure.ac  efivars.c  efivars.h  gummiboot-postinst.sh  gummiboot.c  loader-postinst.sh  setup.c  test-create-disk.sh
src/efi/: gummiboot.c
src/setup/: efivars.c  efivars.h  gummiboot.xml  setup.c
test/: test-create-disk.sh
